<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">COVID Diary</string>
    <string name="action_settings">Settings</string>
    <string name="new_contact">New contact</string>
    <string name="new_event">New event</string>
    <string name="event_name">Event name</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="place">Place</string>
    <string name="companions">Companions (optional)</string>
    <string name="close_event_question">Do you think you kept the distance?</string>
    <string name="name">Name</string>
    <string name="known_contact">Relative or close friend?</string>
    <string name="distance_question">Do you think you kept the distance?</string>
    <string name="phone">Phone (optional)</string>
    <string name="unsure">Not sure</string>
    <string name="encounter_type">Encounter type</string>
    <string name="indoors">Indoors</string>
    <string name="outdoors">Outdoors</string>
    <string name="emptydiary">The diary is empty</string>
    <string name="contact_saved">Contact saved</string>
    <string name="event_saved">Event saved</string>
    <string name="edit_event">Edit Event</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="time_optional">Time (optional)</string>
    <string name="options">Options</string>
    <string name="contact_deleted">Entry deleted</string>
    <string name="contact_developer_summary">Tell me what you think about the app, or problems you have encountered</string>
    <string name="contact_developer">Contact the developer</string>
    <string name="about_donate">Buy me a coffee</string>
    <string name="notification_title">Who have you been with today?</string>
    <string name="notification_text">Add your contacts to the diary</string>
    <string name="choose_option">Please, choose an option</string>
    <string name="compulsory_field">Compulsory field</string>
    <string name="contact_developer_uri" translatable="false">mailto:alex@alexpozas.com</string>
    <string name="feedback_subject" translatable="false">Feedback about COVID Diary</string>
    <string name="donate_url" translatable="false">https://www.paypal.me/apozasker</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="alarm_modified">Alarm modified</string>
    <string name="incorrect_alarm_time">Please, insert a correct time</string>
    <string name="daily_reminder">Daily reminder</string>
    <string name="choose_time">Choose time</string>
    <string name="show_close_contacts">Show close contacts only</string>
    <string name="more">More</string>
    <string name="settings">Settings</string>
</resources>