<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <PreferenceCategory
        android:title="Ajustes">

        <SwitchPreference
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:key="reminder_toggle"
            android:title="Recordatorio diario"
            android:defaultValue="true"/>

        <EditTextPreference
            android:dependency="reminder_toggle"
            android:key="reminder_time"
            android:title="Seleccionar hora"
            android:dialogLayout="@layout/preference_edit_text"
            android:defaultValue="21:00"
            app:useSimpleSummaryProvider="true"/>

        <SwitchPreference
            android:key="closecontactonly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:title="Mostrar solo contactos de riesgo" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Más" >

        <Preference
            android:key="about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:title="@string/about_donate" >
            <intent android:action="android.intent.action.VIEW"
                android:data="@string/donate_url"/>
        </Preference>

        <Preference
            android:key="contactDev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:title="@string/contact_developer"
            android:summary="@string/contact_developer_summary">
            <intent android:action="android.intent.action.VIEW"
                android:data="@string/contact_developer_uri">
                <extra android:name="android.intent.extra.SUBJECT"
                    android:value="@string/feedback_subject" />
            </intent>

        </Preference>

    </PreferenceCategory>
</PreferenceScreen>